build/log/idf_py_stdout_output_75760
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/build/bootloader/esp-idf/esptool_py && /home/kevin_lucas/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/kevin_lucas/esp/v5.4/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/build/bootloader/bootloader.bin
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/kevin_lucas/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/build/config -I/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main -I/home/kevin_lucas/esp/v5.4/esp-idf/components/newlib/platform_include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/config/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/config/include/freertos -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/config/xtensa/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/kevin_lucas/esp/v5.4/esp-idf/components/freertos/esp_additions/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/include/soc -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/dma/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/ldo/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/debug_probe/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/. -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_hw_support/port/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/heap/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/heap/tlsf -I/home/kevin_lucas/esp/v5.4/esp-idf/components/log/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/soc/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/soc/esp32 -I/home/kevin_lucas/esp/v5.4/esp-idf/components/soc/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/soc/esp32/register -I/home/kevin_lucas/esp/v5.4/esp-idf/components/hal/platform_port/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/hal/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/hal/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_rom/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_rom/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_rom/esp32 -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_common/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_system/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_system/port/soc -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_system/port/include/private -I/home/kevin_lucas/esp/v5.4/esp-idf/components/xtensa/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/xtensa/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/xtensa/deprecated_include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/include/apps -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/include/apps/sntp -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/lwip/src/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/port/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/port/freertos/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/kevin_lucas/esp/v5.4/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/components/dht -I/home/kevin_lucas/esp/v5.4/esp-idf/components/driver/deprecated -I/home/kevin_lucas/esp/v5.4/esp-idf/components/driver/i2c/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/driver/touch_sensor/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/driver/twai/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/driver/touch_sensor/esp32/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_pm/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_ringbuf/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_gpio/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_pcnt/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_gptimer/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_spi/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_mcpwm/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_ana_cmpr/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_i2s/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_sdmmc/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/sdmmc/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_sdspi/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_sdio/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_dac/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_rmt/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_tsens/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_sdm/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_i2c/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_uart/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/vfs/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_ledc/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_parlio/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/spiffs/include -I/home/kevin_lucas/esp/v5.4/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps=. -fmacro-prefix-map=/home/kevin_lucas/esp/v5.4/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c
/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c: In function 'get_current_timestamp':
/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c:53:26: error: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   53 |     snprintf(timestamp + strlen(timestamp), max_len - strlen(timestamp), ".%03ld", tv.tv_usec / 1000);
      |                          ^~~~~~
/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c:9:1: note: include '<string.h>' or provide a declaration of 'strlen'
    8 | #include "esp_log.h"
  +++ |+#include <string.h>
    9 | 
/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c:53:26: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   53 |     snprintf(timestamp + strlen(timestamp), max_len - strlen(timestamp), ".%03ld", tv.tv_usec / 1000);
      |                          ^~~~~~
/home/kevin_lucas/esp/v5.4/esp-idf/tcc/MLOps/main/main.c:53:26: note: include '<string.h>' or provide a declaration of 'strlen'
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
